
apply plugin: 'java'

sourceCompatibility = '1.8'

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

//mainClassName = 'core.App'
version = '0.0.0'

// NetBeans will automatically add "run" and "debug" tasks relying on the
// "mainClass" property. You may however define the property prior executing
// tasks by passing a "-PmainClass=<QUALIFIED_CLASS_NAME>" argument.
//
// Note however, that you may define your own "run" and "debug" task if you
// prefer. In this case NetBeans will not add these tasks but you may rely on
// your own implementation.
if (!hasProperty('mainClass')) {
    ext.mainClass = 'mo.core.MultimodalObserver'
}

repositories {
    mavenCentral()
    // You may define additional repositories, or even remove "mavenCentral()".
    // Read more about repositories here:
    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:repositories
    
    //allow local dependencies (dockframes)
    flatDir {
        dirs 'libs'
        dirs '../libs'
    }
    
    maven {
        //url  "http://dl.bintray.com/eyetribe/maven"
        url  "http://artifactory.autocrm.net/artifactory/repo"
    }
}

dependencies {
    // TODO: Add dependencies here ...
    // You can read more about how to add dependency here:
    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
    testCompile group: 'junit', name: 'junit', version: '4.10'
    
    //https://mvnrepository.com/artifact/org.openjfx/javafx-controls
    compile group: 'org.openjfx', name: 'javafx-controls', version: '11.0.2'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-swing
    compile group: 'org.openjfx', name: 'javafx-swing', version: '11.0.2'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-graphics
    compile group: 'org.openjfx', name: 'javafx-graphics', version: '11.0.2'

    // https://mvnrepository.com/artifact/org.openjfx/javafx-base
    compile group: 'org.openjfx', name: 'javafx-base', version: '11.0.2'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-media
    compile group: 'org.openjfx', name: 'javafx-media', version: '11.0.2'
    // https://mvnrepository.com/artifact/org.openjfx/javafx-fxml
    compile group: 'org.openjfx', name: 'javafx-fxml', version: '11.0.2'

    // http://mvnrepository.com/artifact/org.ow2.asm/asm
    compile group: 'org.ow2.asm', name: 'asm', version: '5.1'
    
    // http://mvnrepository.com/artifact/com.esotericsoftware.reflectasm/reflectasm
    compile group: 'com.esotericsoftware.reflectasm', name: 'reflectasm', version: '1.09'

    // http://mvnrepository.com/artifact/commons-io/commons-io
    compile group: 'commons-io', name: 'commons-io', version: '2.5'

    //compile fileTree(dir: 'libs', include: '*.jar')
    //compile 'org.dockingframes:docking-frames-common:1.1.1'
    /*compile name: "docking-frames-core"
    compile name: "docking-frames-common"
    compile name: "fontawesomefx-8.2"
    compile name: "jfoenix-9.0.8"*/
    compile fileTree (include: ["*.jar"], dir:'libs')
    
    // http://mvnrepository.com/artifact/org.apache.commons/commons-configuration2
    compile group: 'org.apache.commons', name: 'commons-configuration2', version: '2.0'

    // http://mvnrepository.com/artifact/commons-beanutils/commons-beanutils
    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.2'

    // http://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream
    compile group: 'com.thoughtworks.xstream', name: 'xstream', version: '1.4.9'

    compile 'nz.net.ultraq.preferences:preferences-xml:1.2.2'
    
    // https://mvnrepository.com/artifact/org.reflections/reflections
    compile group: 'org.reflections', name: 'reflections', version: '0.9.10'

    // https://mvnrepository.com/artifact/com.github.zafarkhaja/java-semver
    compile group: 'com.github.zafarkhaja', name: 'java-semver', version: '0.9.0'

    compile 'org.jdatepicker:jdatepicker:1.3.4'
    
    // https://mvnrepository.com/artifact/com.1stleg/jnativehook
    compile group: 'com.1stleg', name: 'jnativehook', version: '2.0.3'
    
    //compile name:'mindstream'
    
    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
    
    //compile 'com.theeyetribe:eyetribe-java:0.9.60'
    
    //compile 'es.e-ucm:i18n:1.1.2-SNAPSHOT'
    
    //Jackson: json lib
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
    
    // https://mvnrepository.com/artifact/org.asynchttpclient/async-http-client
    ////////compile group: 'org.asynchttpclient', name: 'async-http-client', version: '2.0.3'
    compile 'org.asynchttpclient:async-http-client:2.1.0-alpha26'
    
    // https://mvnrepository.com/artifact/com.github.junrar/junrar
    compile group: 'com.github.junrar', name: 'junrar', version: '0.7'   
    
    // https://mvnrepository.com/artifact/org.rauschig/jarchivelib
    compile group: 'org.rauschig', name: 'jarchivelib', version: '0.7.0'
   
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
    testCompile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'

    // https://mvnrepository.com/artifact/aopalliance/aopalliance
    compile group: 'aopalliance', name: 'aopalliance', version: '1.0'

    // https://mvnrepository.com/artifact/javax.inject/javax.inject
    compile group: 'javax.inject', name: 'javax.inject', version: '1'

    // https://mvnrepository.com/artifact/com.google.guava/guava
    compile group: 'com.google.guava', name: 'guava', version: '16.0.1'
    
    // https://mvnrepository.com/artifact/com.google.inject/guice
    compile group: 'com.google.inject', name: 'guice', version: '4.0'

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.7'
    
    // https://mvnrepository.com/artifact/com.jfoenix/jfoenix
    compile group: 'com.jfoenix', name: 'jfoenix', version: '8.0.7'
    
    // https://mvnrepository.com/artifact/de.jensd/fontawesomefx
    compile group: 'de.jensd', name: 'fontawesomefx', version: '8.2'
    
    // https://mvnrepository.com/artifact/de.jensd/fontawesomefx
    compile group: 'de.jensd', name: 'fontawesomefx', version: '8.9'
    
     // https://mvnrepository.com/artifact/com.zavtech/morpheus-core
    compile group: 'com.zavtech', name: 'morpheus-core', version: '0.9.23'
    

   
}


jar {
    manifest {
        attributes( 'Implementation-Title'   : 'Gradle',
                    'Implementation-Version' :  version,
                    'Main-Class'             : 'mo.core.MultimodalObserver',
            //'SplashScreen-Image'     : 'images/splash.gif'
            //"Class-Path": "plugins${File.separator}"
        )
    }
    
    from (configurations.compile.collect 
        { it.isDirectory() ? it : zipTree(it) }){
        // remove all signature files
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    
    doLast{
        project.file('build/libs/plugins').mkdirs()
        copy{
            from 'src/main/resources'
            into 'build/libs'
        }
    }
}


// Configuración para el proyecto updater
//sourceSets {
 //   updater {
   //     java {
    //       srcDirs 'src/main/java/mo/updating'
    //    }
   // }
//}

//task updaterJar(type: Jar, dependsOn: classes){
 //   from(sourceSets.updater.output)
 //   archiveFileName = 'updater.jar'
  //  destinationDir = file('build/libs')
//}

//build.dependsOn updaterJar



//build.doLast{
//    javaexec { 
//        main = "-jar";
//        args = [ "build/libs/memoria-1.0.jar" ]
//    } 
//}
